修改testNG样式，修改pom文件实现不同环境的判断，调试mvn test命令运行脚本